--- a/index.html
+++ b/index.html
@@ -4,20 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"
+    />
+    <link rel="stylesheet" href="accordion.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>Skygate</title>
   </head>
   <body>
-    <form onsubmit="getResults(country.value)" id="countryForm">
-      <select name="country" id="country">
-        <option value="PL">Poland</option>
-        <option value="DE">Germany</option>
-        <option value="ES">Spain</option>
-        <option value="FR">France</option>
-      </select>
-      <input type="submit" value="submit" />
-    </form>
-    <div id="results"></div>
+    <div class="container">
+      <h1 class="mx-auto">
+        Most
+        <span class="polluted"
+          ><i class="fas fa-skull-crossbones"></i> polluted</span
+        >
+        cities
+      </h1>
+
+      <form onsubmit="getResults(country.value)" id="countryForm" class="form">
+        <label class="form__label" for="country">Choose a country</label>
+        <select class="custom-select" name="country" id="country">
+          <option value="PL">Poland</option>
+          <option value="DE">Germany</option>
+          <option value="ES">Spain</option>
+          <option value="FR">France</option>
+        </select>
+        <input type="submit" value="submit" class="btn btn-danger button" />
+      </form>
+      <div id="results" class="accordion-container"></div>
+    </div>
+    <script src="accordion.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
